# life-capital

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  verify_raw_handler.py
.github/: CODEOWNERS
.github/workflows/: contract-check.yml
docs/: DEVELOPMENT.md  canonical_handler.md  raw_handler_usage.md  verify_docs.py
docs/advisor/: stage3-api.md  stage3-design.md
docs/commands/: capture-staging.md
docs/contracts/: CHANGELOG.md  capture_isolation_contract.md  interface_policy.md  io_contract.md  schema_contract.md
docs/examples/: expense_policy.yaml  expenses_2025_01.csv  life_assumptions.yaml  lifetime_targets.yaml  monthly_income.yaml  staging_store_usage.md
docs/roadmap/: V2.5.md
life_capital/: __init__.py  cli.py
life_capital/advisor/: __init__.py  comparability.py  context_builder.py  decision_comparator.py  proposal_generator.py  risk_assessor.py  schemas.py
life_capital/calculators/: __init__.py  budget.py  lifetime.py  projection.py  rounding.py  scenario.py
life_capital/capture/: STAGING_SERVICE_README.md  __init__.py  date_adapter.py  entity_extractor.py  expense_parser.py  models.py  staging_service.py
life_capital/commands/: __init__.py  advisor_cmd.py  apply_cmd.py  capture_cmd.py  dedupe_cmd.py  doctor.py  expense.py  import_cmd.py  init.py  lifetime.py  migrate_cmd.py  (+9 more)
scripts/: README.md  check_schema_diff.py  golden_data_diff.py  init_seed_data.py  schema_normalize.py  update_schema_baseline.py  verify_seed_data.py
tests/: README.md  __init__.py  conftest.py  test_conftest_fixtures.py  test_seed_integration.py
(+161 files in other folders)
