[project]
name = "life-capital"
version = "0.1.0"
description = "終身財務規劃系統 - Lifetime Financial Planning System"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Luke Lin", email = "luke1209@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
lc = "life_capital.cli:app"
life-capital = "life_capital.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
